<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#cc8400"
            android:text="@string/orange_textView"
            android:textSize="24sp"
            android:textColor="#ffffff"
            android:gravity="center"
            android:layout_weight="1"
            android:paddingTop="16dp"
            android:paddingBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#20B2AA"
            android:text="@string/green_textView"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_weight="1"
            android:paddingTop="16dp"
            android:paddingBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#B0C4DE	"
            android:text="@string/blue_textView"
            android:textSize="24sp"
            android:textColor="#ffffff"
            android:gravity="center"
            android:layout_weight="1"
            android:paddingTop="16dp"
            android:paddingBottom="16dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/sampleButton_text"
            android:textSize="16sp"
            android:paddingTop="40dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingBottom="40dp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_margin="8dp" />

        <ImageView
            android:layout_width="165dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/art" />

        <Button
            android:layout_width="194dp"
            android:layout_height="match_parent"
            android:background="#2E8B57"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="40dp"
            android:paddingBottom="40dp"
            android:text="@string/greenButton_text"
            android:layout_margin="8dp"
            android:textSize="16sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#CFB53B"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editText_text"
            android:textSize="24sp"
            android:paddingTop="40dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newEditText_text"
            android:textSize="24sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#87CEFA"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#87CEFA">

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkBox_text"
                android:textSize="24sp"
                android:paddingTop="8dp"
                android:layout_weight="1" />

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/switch_text"
                android:textSize="20sp"
                android:layout_weight="1" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">
            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rating="4"
                android:progressTint="#F08080"
                style="?android:attr/ratingBarStyleIndicator" />
        </LinearLayout>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:textSize="24sp"
                android:paddingTop="8dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:textSize="24sp"
                android:paddingTop="8dp" />
            ></RadioGroup>
    </LinearLayout>
</LinearLayout>